--- a/index.html
+++ b/index.html
@@ -81,12 +81,13 @@
 
     <div class="carte justify-content-center">
 
+        <!-- ------ -->
+
         <div class="card">
             <div class="header">
                 <p class="title">Adresse</p>
                 <a class="badge badge-pill badge-primary" href="geo:56.510107, 21.001633">Kūrmājas prospekts 13, Liepāja, LV-3401
-                    <a class="badge badge-light" href="https://goo.gl/maps/wjLGUgMJ7gk"
-                        target="_blank">Google maps</a>
+                    <a class="badge badge-light" href="https://goo.gl/maps/wjLGUgMJ7gk" target="_blank">Google maps</a>
                 </a>
                 <p class="title">Site web</p>
                 <a class="badge badge-pill badge-primary" href="http://mplab.lv/" target="_blank">mplab.lv</a>
@@ -99,17 +100,18 @@
             </div>
         </div>
 
+        <!-- ------ -->
+
         <div class="card">
-            <div class="header">
+            <div class="habitation">
                 <p class="title">Adresse</p>
-                <a class="badge badge-pill badge-primary" href="geo:56.505549, 21.019476">Ganību iela 36/48, Liepāja, LV-3401
-                    <a class="badge badge-light" href="https://goo.gl/maps/iFhNAXjuCqR2"
-                        target="_blank">Google maps</a>
+                <a class="badge badge-pill badge-success" href="geo:56.505549, 21.019476">Ganību iela 36/48, Liepāja, LV-3401
+                    <a class="badge badge-light" href="https://goo.gl/maps/iFhNAXjuCqR2" target="_blank">Google maps</a>
                 </a>
                 <p class="title">Site web</p>
-                <a class="badge badge-pill badge-primary" href="https://www.liepu.lv/lv/291/dienesta-viesnica" target="_blank">liepu.lv/lv/291/dienesta-viesnica</a>
+                <a class="badge badge-pill badge-success" href="https://www.liepu.lv/lv/291/dienesta-viesnica" target="_blank">liepu.lv/lv/291/dienesta-viesnica</a>
                 <p class="title">Numéro de téléphone</p>
-                <a class="badge badge-pill badge-primary" href="tel:63424275">63 420 165</a>
+                <a class="badge badge-pill badge-success" href="tel:63424275">63 420 165</a>
             </div>
 
             <div class="container">
@@ -117,65 +119,26 @@
             </div>
         </div>
 
+        <!-- ------ -->
+
         <div class="card">
-            <div class="header">
+            <div class="manger">
                 <p class="title">Adresse</p>
-                <a href="geo:Kūrmājas prospekts 13, Liepāja, LV-3401">Kūrmājas prospekts 13, Liepāja, LV-3401</a>
+                <a class="badge badge-pill badge-warning" href="geo:56.509616, 21.009635">Friča Brīvzemnieka iela 36, Liepāja, LV-3401, Lettonie
+                    <a class="badge badge-light" href="https://goo.gl/maps/NXo48aBfmMK2" target="_blank">Google maps</a>
+                </a>
                 <p class="title">Site web</p>
-                <a href="http://mplab.lv/" target="_blank">mplab.lv</a>
+                <a class="badge badge-pill badge-warning" href="http://www.dokapica.lv/" target="_blank">dokapica.lv</a>
                 <p class="title">Numéro de téléphone</p>
-                <a href="tel:63 425 537">63 425 537</a>
+                <a class="badge badge-pill badge-warning" href="tel:63 420 290">63 420 290</a>
             </div>
 
             <div class="container">
-                <p class="title">Laboratoire de recherche</p>
+                <p class="title">Doka pizza</p>
             </div>
         </div>
 
-        <div class="card">
-            <div class="header">
-                <p class="title">Adresse</p>
-                <a href="geo:Kūrmājas prospekts 13, Liepāja, LV-3401">Kūrmājas prospekts 13, Liepāja, LV-3401</a>
-                <p class="title">Site web</p>
-                <a href="http://mplab.lv/" target="_blank">mplab.lv</a>
-                <p class="title">Numéro de téléphone</p>
-                <a href="tel:63 425 537">63 425 537</a>
-            </div>
-
-            <div class="container">
-                <p class="title">Laboratoire de recherche</p>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="header">
-                <p class="title">Adresse</p>
-                <a href="geo:Kūrmājas prospekts 13, Liepāja, LV-3401">Kūrmājas prospekts 13, Liepāja, LV-3401</a>
-                <p class="title">Site web</p>
-                <a href="http://mplab.lv/" target="_blank">mplab.lv</a>
-                <p class="title">Numéro de téléphone</p>
-                <a href="tel:63 425 537">63 425 537</a>
-            </div>
-
-            <div class="container">
-                <p class="title">Laboratoire de recherche</p>
-            </div>
-        </div>
-
-        <div class="card">
-            <div class="header">
-                <p class="title">Adresse</p>
-                <a href="geo:Kūrmājas prospekts 13, Liepāja, LV-3401">Kūrmājas prospekts 13, Liepāja, LV-3401</a>
-                <p class="title">Site web</p>
-                <a href="http://mplab.lv/" target="_blank">mplab.lv</a>
-                <p class="title">Numéro de téléphone</p>
-                <a href="tel:63 425 537">63 425 537</a>
-            </div>
-
-            <div class="container">
-                <p class="title">Laboratoire de recherche</p>
-            </div>
-        </div>
+        <!-- ------ -->
 
     </div>
 
