--- a/index.html
+++ b/index.html
@@ -77,14 +77,30 @@
         </ol>
     </div>
 
-
+    <div class="legende justify-content-center">
+        <div class="badge badge-pill badge-success">
+            Loger
+        </div>
+        <div class="badge badge-pill badge-warning">
+            Manger
+        </div>
+        <div class="badge badge-pill badge-primary">
+            Etudier
+        </div>
+        <div class="badge badge-pill badge-danger">
+            Voyager
+        </div>
+        <div class="badge badge-pill badge-info">
+            Informer
+        </div>
+    </div>
 
     <div class="carte justify-content-center">
 
         <!-- ------ -->
 
         <div class="card">
-            <div class="header">
+            <div class="etudier">
                 <p class="title">Adresse</p>
                 <a class="badge badge-pill badge-primary" href="geo:56.510107, 21.001633">Kūrmājas prospekts 13, Liepāja, LV-3401
                     <a class="badge badge-light" href="https://goo.gl/maps/wjLGUgMJ7gk" target="_blank">Google maps</a>
@@ -93,6 +109,8 @@
                 <a class="badge badge-pill badge-primary" href="http://mplab.lv/" target="_blank">mplab.lv</a>
                 <p class="title">Numéro de téléphone</p>
                 <a class="badge badge-pill badge-primary" href="tel:63425537">63 425 537</a>
+                <p class="title">Recommandé</p>
+                <a class="badge badge-pill badge-dark">✔️</a>
             </div>
 
             <div class="container">
@@ -112,6 +130,8 @@
                 <a class="badge badge-pill badge-success" href="https://www.liepu.lv/lv/291/dienesta-viesnica" target="_blank">liepu.lv/lv/291/dienesta-viesnica</a>
                 <p class="title">Numéro de téléphone</p>
                 <a class="badge badge-pill badge-success" href="tel:63424275">63 420 165</a>
+                <p class="title">Recommandé</p>
+                <a class="badge badge-pill badge-dark">❌</a>
             </div>
 
             <div class="container">
@@ -131,10 +151,156 @@
                 <a class="badge badge-pill badge-warning" href="http://www.dokapica.lv/" target="_blank">dokapica.lv</a>
                 <p class="title">Numéro de téléphone</p>
                 <a class="badge badge-pill badge-warning" href="tel:63 420 290">63 420 290</a>
+                <p class="title">Recommandé</p>
+                <a class="badge badge-pill badge-dark">✔️</a>
             </div>
 
             <div class="container">
                 <p class="title">Doka pizza</p>
+            </div>
+        </div>
+
+        <!-- ------ -->
+
+        <div class="card">
+            <div class="etudier">
+                <p class="title">Adresse</p>
+                <a class="badge badge-pill badge-primary" href="geo:XXX">Lielā iela 14, Liepāja, LV-3401
+                    <a class="badge badge-light" href="https://goo.gl/maps/ZHoTYST42sy" target="_blank">Google maps</a>
+                </a>
+                <p class="title">Site web</p>
+                <a class="badge badge-pill badge-primary" href="https://www.liepu.lv/en/" target="_blank">liepu.lv/en</a>
+                <p class="title">Numéro de téléphone</p>
+                <a class="badge badge-pill badge-primary" href="tel:63 425 659">63 425 659</a>
+                <p class="title">Recommandé</p>
+                <a class="badge badge-pill badge-dark">❔</a>
+            </div>
+
+            <div class="container">
+                <p class="title">Université de Liepaja</p>
+            </div>
+        </div>
+
+        <!-- ------ -->
+
+        <div class="card">
+            <div class="manger">
+                <p class="title">Adresse</p>
+                <a class="badge badge-pill badge-warning" href="geo:XXX">Kungu iela 40/42, Liepāja, LV-3401
+                    <a class="badge badge-light" href="https://goo.gl/maps/sgqLVJoRv2M2" target="_blank">Google maps</a>
+                </a>
+                <p class="title">Site web</p>
+                <a class="badge badge-pill badge-warning" href="http://supernetto.lv/" target="_blank">supernetto.lv</a>
+                <p class="title">Numéro de téléphone</p>
+                <a class="badge badge-pill badge-warning" href="tel:63 426 016">63 426 016</a>
+                <p class="title">Recommandé</p>
+                <a class="badge badge-pill badge-dark">❌</a>
+            </div>
+
+            <div class="container">
+                <p class="title">Supernetto</p>
+            </div>
+        </div>
+
+        <!-- ------ -->
+
+        <div class="card">
+            <div class="manger">
+                <p class="title">Adresse</p>
+                <a class="badge badge-pill badge-warning" href="geo:XXX">Lielā iela 13, Liepāja, LV-3401
+                    <a class="badge badge-light" href="https://goo.gl/maps/VSRxQto8z6w" target="_blank">Google maps</a>
+                </a>
+                <p class="title">Site web</p>
+                <a class="badge badge-pill badge-warning" href="http://www.tnkurzeme.lv/en" target="_blank">tnkurzeme.lv/en</a>
+                <p class="title">Numéro de téléphone</p>
+                <a class="badge badge-pill badge-warning" href="tel:29 241 413">29 241 413</a>
+                <p class="title">Recommandé</p>
+                <a class="badge badge-pill badge-dark">✔️</a>
+            </div>
+
+            <div class="container">
+                <p class="title">Centre commercial KURZEME</p>
+            </div>
+        </div>
+
+        <!-- ------ -->
+
+        <div class="card">
+            <div class="manger">
+                <p class="title">Adresse</p>
+                <a class="badge badge-pill badge-warning" href="geo:XXX">Kārļa Zāles laukums 8, Liepāja, LV-3401
+                    <a class="badge badge-light" href="https://goo.gl/maps/WK78nBmEjMA2" target="_blank">Google maps</a>
+                </a>
+                <p class="title">Site web</p>
+                <a class="badge badge-pill badge-warning" href="https://www.rimi.lv/" target="_blank">rimi.lv</a>
+                <p class="title">Numéro de téléphone</p>
+                <a class="badge badge-pill badge-warning" href="tel:63 484 747">63 484 747</a>
+                <p class="title">Recommandé</p>
+                <a class="badge badge-pill badge-dark">✔️</a>
+            </div>
+
+            <div class="container">
+                <p class="title">Centre commercial RIMI</p>
+            </div>
+        </div>
+
+        <!-- ------ -->
+
+        <div class="card">
+            <div class="habitation">
+                <p class="title">Site web</p>
+                <a class="badge badge-pill badge-success" href="https://www.ss.com/lv/real-estate/flats/liepaja-and-reg/liepaja/" target="_blank">ss.com/lv/real-estate/flats/liepaja-and-reg/liepaja</a>
+                <p class="title">Recommandé</p>
+                <a class="badge badge-pill badge-dark">❔</a>
+            </div>
+
+            <div class="container">
+                <p class="title">Site de location</p>
+            </div>
+        </div>
+
+        <!-- ------ -->
+
+        <div class="card">
+            <div class="voyager">
+                <p class="title">Site web</p>
+                <a class="badge badge-pill badge-danger" href="http://www.marsruti.lv/liepaja/#plan//map" target="_blank">marsruti.lv/liepaja/#plan//map</a>
+                <p class="title">Recommandé</p>
+                <a class="badge badge-pill badge-dark">✔️</a>
+            </div>
+
+            <div class="container">
+                <p class="title">Transports en commun</p>
+            </div>
+        </div>
+
+        <!-- ------ -->
+
+        <div class="card">
+            <div class="informer">
+                <p class="title">Site web</p>
+                <a class="badge badge-pill badge-info" href="https://wikitravel.org/en/Liepaja" target="_blank">wikitravel.org/en/Liepaja</a>
+                <p class="title">Recommandé</p>
+                <a class="badge badge-pill badge-dark">❔</a>
+            </div>
+
+            <div class="container">
+                <p class="title">Guide touritique</p>
+            </div>
+        </div>
+
+        <!-- ------ -->
+
+        <div class="card">
+            <div class="voyager">
+                <p class="title">Site web</p>
+                <a class="badge badge-pill badge-danger" href="https://www.1188.lv/en/transport/buses" target="_blank">1188.lv/en/transport/buses</a>
+                <p class="title">Recommandé</p>
+                <a class="badge badge-pill badge-dark">✔️</a>
+            </div>
+
+            <div class="container">
+                <p class="title">Bus interville</p>
             </div>
         </div>
 
