--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
 
             <div class="container">
-                <p class="title">Laboratoire de recherche</p>
+                <p class="title">Laboratoire d’expérimentations</p>
             </div>
         </div>
 
@@ -307,6 +307,18 @@
         <!-- ------ -->
 
     </div>
+
+        <div class="footer">
+            <p class="title">Vous pouvez modifier ou ajouter des informations sur ce site</p>
+            <p class="title">Les fichiers HTML et CSS se trouvent à cette adresse</p>
+            <a class="badge badge-pill badge-dark github" href="https://github.com/AlexQuiniou/bienvenue-a-liepaja">bienvenue-a-liepaja</a>
+        </div>
+
+        <!-- <div class="container">
+            <p class="title">Bus interville</p>
+        </div> -->
+    </div>
+
 
 </body>
 
